# diegin

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt  sync.ps1
.codex-plugin/: plugin.json
config/: DGEN_GLOBAL_ACCESS.md  config.toml  hooks.json  requirements.toml
deploy/: deploy.ps1
engine/: __init__.py  _write_today_rules.py  call_diegin.py  dgen_override.py  dgen_pre_check_runner.py  diegin_status.bat  diegin_status.py  mindol_bridge.py  test_all.py
engine/config/: config.toml
engine/evo/: __init__.py  arbiter.py  closure.py  dashboard.py  error_detector.py  evidence_vault.py  main.py  pacemaker.py  reviewer.py  rule_engine.py  tracker.py  war_game.py
engine/mindol/: __init__.py  codex_adapter.py  core.py  diegin_integration.py  models.py  vectorizer.py
engine/workspace/: success_log.json
hooks/: dgen_evolve.py  diegin_notify.ps1  diegin_notify_wrapper.ps1  diegin_post_tool.ps1  diegin_pre_reply.ps1  diegin_pre_tool.ps1  diegin_session_image_clean.ps1  diegin_session_start.ps1  diegin_stop.ps1  hooks.json
plugin/: package.json
plugin/src/: index.ts
references/: codex-hooks.md
scripts/: diegin_notify.ps1  diegin_notify_wrapper.ps1  diegin_post_tool.ps1  diegin_pre_reply.ps1  diegin_pre_tool.ps1  diegin_session_image_clean.ps1  diegin_session_start.ps1  diegin_stop.ps1  monitor_v3.py
scripts/gh-publish-skill/: SKILL.md
skills/: SKILL.md
tests/evo/: test_arbiter.py  test_dashboard.py  test_reviewer.py  (+3 more)
workspace/: dgen_rules.md  review_full_cycle.md  rule_classification_overview.md  迭进体系结构图.md
(+23 files in other folders)
