п»ҝ[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "diegin"
version = "3.0.0"
description = "AI йҚҸг„Ҙз…ҷз”ҜжҗҒв”—й‘·оҒ…еһңжқ©о…қе”¬жқ©ж¶ҳеҜІз»ҜиҚӨзІә"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Diegin Community"}]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["engine"]
